crates/solidity/testing/snapshots/bindings_output/using/deconstruction/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected Identifier.
    ╭─[input.sol:10:11]
    │
 10 │     using {Lib.increment} for Lib.Counter;
    │           ───────────────┬───────────────  
    │                          ╰───────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ library Lib {
    │         ─┬─  
    │          ╰─── name: 1
  2 │     struct Counter {
    │            ───┬───  
    │               ╰───── name: 2
  3 │         uint value;
    │              ──┬──  
    │                ╰──── name: 3
    │ 
  6 │     function increment(Counter memory _counter) public {}
    │              ────┬──── ───┬───        ────┬───  
    │                  ╰────────────────────────────── name: 4
    │                           │               │     
    │                           ╰───────────────────── ref: 2
    │                                           │     
    │                                           ╰───── name: 5
    │ 
  9 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 6
    │ 
 12 │     function test(Lib.Counter memory c) public {
    │              ──┬─ ─┬─ ───┬───        ┬  
    │                ╰──────────────────────── name: 7
    │                    │     │           │  
    │                    ╰──────────────────── ref: 1
    │                          │           │  
    │                          ╰────────────── ref: 2
    │                                      │  
    │                                      ╰── name: 8
 13 │         c.increment();
    │         ┬ ────┬────  
    │         ╰──────────── ref: 8
    │               │      
    │               ╰────── unresolved
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │   ╭─────│ ▶ library Lib {
  2 │   │     ╭─▶     struct Counter {
  3 │   │     │           uint value;
    │   │     │   ──────────┬─────────  
    │   │     │             ╰─────────── definiens: 3
  4 │   │   │ ├─▶     }
    │   │   │ │           
    │   │   │ ╰─────────── definiens: 2
  5 │   │   ╭───▶ 
  6 │   │   ├───▶     function increment(Counter memory _counter) public {}
    │   │   │                            ───────────┬───────────              
    │   │   │                                       ╰───────────────────────── definiens: 5
    │   │   │                                                                 
    │   │   ╰───────────────────────────────────────────────────────────────── definiens: 4
  7 │ │ ├───────▶ }
    │ │ │             
    │ │ ╰───────────── definiens: 1
  8 │ ╭─────────▶ 
    ┆ ┆           
 11 │ │   ╭─────▶ 
 12 │ │   │           function test(Lib.Counter memory c) public {
    │ │   │                         ──────────┬─────────  
    │ │   │                                   ╰─────────── definiens: 8
    ┆ ┆   ┆       
 14 │ │   ├─────▶     }
    │ │   │               
    │ │   ╰─────────────── definiens: 7
 15 │ ├─────────▶ }
    │ │               
    │ ╰─────────────── definiens: 6
────╯
